<resources>
    <string name="app_name">SEA Salon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="page_title">Homepage</string>
    <string name="username">Full Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registerHere">Dont have an account yet? Register Here</string>
    <string name="email">Email</string>
    <string name="PasswordConfirm">Confirm your password</string>
    <string name="register">Register</string>
    <string name="phone">Phone Number</string>
</resources>